--- a/src/GInterface.form
+++ b/src/GInterface.form
@@ -78,14 +78,6 @@
           <text value="Decrypt"/>
         </properties>
       </component>
-      <component id="70e69" class="javax.swing.JTextField" binding="textField1" default-binding="true">
-        <constraints>
-          <grid row="1" column="3" row-span="7" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="fed79" class="javax.swing.JRadioButton" binding="radioButtonCesar">
         <constraints>
           <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -124,6 +116,17 @@
         </constraints>
         <properties>
           <text value="Key:"/>
+        </properties>
+      </component>
+      <component id="32286" class="javax.swing.JTextArea" binding="textAreaTrace">
+        <constraints>
+          <grid row="1" column="3" row-span="7" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
+          </grid>
+        </constraints>
+        <properties>
+          <editable value="false"/>
+          <enabled value="false"/>
         </properties>
       </component>
     </children>
